--- a/index.css
+++ b/index.css
@@ -14,6 +14,9 @@ body {
 }
 
 .slots {
-  size: 50px;
+  width: 30vw;
+  height: auto;
   color: white;
+  align-content: center;
+  display: inline;
 }
