--- a/index.css
+++ b/index.css
@@ -23,3 +23,27 @@ body {
   padding: 10px;
   border: 1px solid white;
 }
+
+#slot1 {
+  font-size: 10px;
+  align-content: center;
+  margin: auto;
+  display: inline-block;
+  color: #ff0000;
+}
+
+#slot2 {
+  font-size: 10px;
+  align-content: center;
+  margin: auto;
+  display: inline-block;
+  color: #00ff00;
+}
+
+#slot3 {
+  font-size: 10px;
+  align-content: center;
+  margin: auto;
+  display: inline-block;
+  color: #0000ff;
+}
